--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,81 @@ header {
 }
 
 #logo {
-width: 10%;
+width: 15%;
 margin-top: 3%;
 margin-left: 4px;
 }
 
 body {
-    margin:0%;
+    margin:0px;
+}
+
+h1 {
+    margin-bottom: 0;
+
+}
+
+h3 {
+    color:grey;
+    margin: 0;
+}
+
+h4 {
+    margin-top:0;
+    color: grey;
+}
+
+span {
+    color: aqua;
+}
+
+.descrizione {
+    font-size: 50%;
+}
+
+article {
+    margin-top: 2%;
+}
+
+em {
+    background-color: yellow;
+    font-style:normal;
+}
+
+table {
+    width:100%;
+    height:fit-content;
+
+}
+
+thead {
+    background-color: rgb(16, 134, 160);
+    color: white;
+}
+
+.odd {
+    background-color: aqua;
+}
+main {
+    margin-bottom: 2%;
+}
+
+#monitor {
+    background-image: url(../img/monitor.jpg);
+}
+
+#graph {
+    background-image: url(../img/graph.jpg);
+}
+
+.foto {
+    background-size: contain;
+    height: 200px;
+    background-repeat: no-repeat;
+    color:white;
+    padding-left: 2px;
+}
+
+footer {
+    margin-left: 4px;
 }
