--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 header {
     background-image: url(../img/pattern.png);
     background-color: aqua;
-    background-size: contain;
+    background-size: 30%;
     
     
 }
